# ML-Trading-Lab

./: .env.example  .gitignore  LICENSE  README.md  Use.md  project.md  pyproject.toml  requirements.txt
Config/: settings.example.yaml
Config/models/: xgboost_latest.json  xgboost_latest_features.json
Docs/: architecture.md
MQL5/Experts/: ML_EA_v1.0.mq5  ML_Trading_Lab_EA.mq5
Scripts/: README.md  download_data.py  run_dashboard.py  run_live_advisor.py
Tests/: test_alignment.py  test_backtest.py  test_bugs_fixed.py  test_delivery.py  test_features.py  test_ml.py  test_rules.py  test_scaffold.py
src/ml_trading_lab/: __init__.py
src/ml_trading_lab/Backtester/: __init__.py  backtester.py
src/ml_trading_lab/Dashboard/: __init__.py  dashboard.py  dashboard_server.py
src/ml_trading_lab/DataEngine/: __init__.py  collector.py  csv_collector.py  mt5_downloader.py
src/ml_trading_lab/DatasetBuilder/: __init__.py  builder.py
src/ml_trading_lab/EA_Generator/: __init__.py  generator.py
src/ml_trading_lab/FeatureEngine/: __init__.py  discovery.py  engine.py
src/ml_trading_lab/LiveAdvisor/: __init__.py  advisor.py
src/ml_trading_lab/ML/: __init__.py  catboost_model.py  lightgbm_model.py  model_arena.py  model_manager.py  rule_extractor.py  xgboost_model.py
src/ml_trading_lab/Optimizer/: __init__.py  evolution_engine.py  optimizer.py
src/ml_trading_lab/StrategyEngine/: __init__.py  strategy.py
src/ml_trading_lab/WalkForward/: __init__.py  monte_carlo.py  validator.py
