[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-trading-lab"
version = "0.1.0"
description = "A research-first platform for improving MT5 trading strategies with validated machine learning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "ML Trading Lab" }]
dependencies = [
    "polars>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
ml = ["scikit-learn>=1.5", "xgboost>=2.1", "lightgbm>=4.5", "catboost>=1.2", "optuna>=3.6", "shap>=0.46"]
mt5 = ["MetaTrader5>=5.0.45"]

[tool.setuptools.packages.find]
include = ["ml_trading_lab*"]

[tool.pytest.ini_options]
testpaths = ["Tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
